typestate-macro/tests/02-no-mod.stderr
error: expected `mod`
 --> $DIR/02-no-mod.rs:4:1
  |
4 | struct S;
  | ^^^^^^
